# CrabSock

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTICE  README.md  TUN_MODE_FIX.md  index.html  package-lock.json  package.json  set_capability.sh  tailwind.config.ts  tauri.conf.json  test_url.rs  tsconfig.app.json  vite.config.ts
.github/: CODEOWNERS
scripts/: tauri-build.mjs
src/: App.vue  commands.rs  lib.rs  main.rs  proxy.rs  shadowsocks.rs  style.css  system_proxy.rs  tun_manager.rs
src-tauri/: Cargo.toml  PKGBUILD  build.rs  crab-sock.desktop  tauri.conf.json  tauri.conf.local.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  test_traditional.rs
src-tauri/macos/: host.entitlements
src-tauri/macos/helper/: Info.plist  helper.entitlements
src-tauri/resources/: install-openvpn-helper.sh  install-tun-policy.sh  singbox-wrapper.sh  windows.manifest  windows_manifest.rc
src-tauri/resources/openvpn_win/openvpn_amd64/: LICENSE.txt
src-tauri/src/: acl_http_proxy.rs  commands.rs  config.rs  config_manager.rs  error.rs  lib.rs  linux_capabilities.rs  main.rs  nekoray_style_proxy.rs  openvpn.rs  openvpn_helper_main.rs  optimized_shadowsocks.rs  proxy.rs  root_helper_main.rs  runtime_settings.rs  shadowsocks.rs  shadowsocks_socks5.rs  simple_proxy.rs  startup.rs  system_proxy.rs  tun_manager.rs  utils.rs  windows_firewall.rs
src-tauri/src/net/: ip.rs  mod.rs  routes.rs  socks.rs
src-tauri/src/outbound/: factory.rs  mod.rs  shadowsocks.rs  socks.rs  strategy.rs  vless.rs
src-tauri/src/proxy/: factory.rs  manager.rs  mod.rs  types.rs
src-tauri/src/proxy/clients/: shadowsocks.rs  socks5.rs  vless.rs  vmess.rs
src-tauri/src/singbox/: config_builder.rs  mod.rs  runner.rs
src-tauri/src/tun/: backend.rs  backend_factory.rs  linux_backend.rs  linux_singbox_backend.rs  macos_singbox_backend.rs  mod.rs  noop_backend.rs  windows_singbox_backend.rs
src/components/: ConfigInput.vue  ConfigList.vue  ConnectButton.vue  ConnectedView.vue  ConnectionStatus.vue  IpFlag.vue  LoadingSpinner.vue  LogsPanel.vue  OpenVpnSection.vue  Settings.vue
src/stores/: vpnStore.ts
src/tauri/: updater.ts
