[package]
name = "crab-sock"
version = "0.1.0"
edition = "2021"

[lib]
name = "crab_sock"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"
ureq = { version = "2.9", features = ["json", "tls"] }
tokio = { version = "1.0", features = ["full"] }
shadowsocks-rust = "1.18"
shadowsocks-service = "1.18"
shadowsocks = "1.18"
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
async-trait = "0.1"
dirs = "6.0"
tun-tap = "0.1"
tokio-tun = "0.15"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
