[package]
name = "crab-sock"
version = "0.1.0"
edition = "2021"
exclude = ["pkg/*", "pkg/**"]

[lib]
name = "crab_sock"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"
ureq = { version = "2.9", features = ["json", "tls"] }
tokio = { version = "1.0", features = ["full"] }
shadowsocks-rust = "1.22.0"
shadowsocks-service = "1.22.0"
shadowsocks = "1.22.0"
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
async-trait = "0.1"
dirs = "6.0"
ctrlc = "3"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
tun-tap = "0.1"
tokio-tun = "0.15"
rtnetlink = "0.14"
ipnetwork = "0.20"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Networking_WinInet",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Security"
] }
tun = "0.8.4"
smoltcp = { version = "0.11", default-features = false, features = ["std", "socket-tcp", "socket-udp", "proto-ipv4", "medium-ip"] }
pnet_packet = "0.35"
netstack-lwip = { git = "https://github.com/eycorsican/netstack-lwip", rev = "4cc3162" }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
embed-resource = "2.5"

 
